# kubecon-patching-demo

./: LICENSE  Makefile  README.md
interface/: Makefile  README.md  codegen.toml  xkcd.smithy
interface/rust/: Cargo.toml
interface/rust/src/: lib.rs  xkcd.rs
xkcd/: Cargo.toml  Makefile  README.md  actor.mk
xkcd-provider/: Cargo.toml  Makefile  README.md  expanded.rs  provider.mk  provider_test_config.toml
xkcd-provider/src/: main.rs
xkcd/src/: lib.rs
