[package]
name = "xkcd-provider"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
xkcd-interface = { version = "0.1", path = "../interface/rust"}
wasmbus-rpc = "0.8.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = "1"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "xkcd_provider"
path = "src/main.rs"
