[package]
name = "xkcd"
version = "0.1.0"
authors = [ "Cosmonic Team (team@cosmonic.com)" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "xkcd"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.4"
wasmcloud-interface-httpserver = "0.5"
wasmcloud-interface-numbergen = "0.5"
xkcd-interface = { path = "../interface/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
